TP3/obj/src/parser.output
Rules useless in parser due to conflicts

  104 declarador: IDENTIFICADOR ASSIGN CONSTANTE
  105           | IDENTIFICADOR ASSIGN CONSTANTE_REAL


Estado 10 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 31 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 77 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 106 conflictos: 2 reducción(ones)/reducción(ones)
Estado 107 conflictos: 2 reducción(ones)/reducción(ones)
Estado 122 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 149 conflictos: 20 desplazamiento(s)/reducción(ones)
Estado 160 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 165 conflictos: 20 desplazamiento(s)/reducción(ones)
Estado 181 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 programa: /* vacío */
    2         | programa elemento_programa

    3 elemento_programa: definicion_funcion
    4                  | declaracion_externa
    5                  | sentencia_expresion_global
    6                  | error ';'
    7                  | error '}'

    8 sentencia_expresion_global: IDENTIFICADOR ASSIGN IDENTIFICADOR ';'
    9                           | expresion ';'

   10 declaracion_externa: declaracion
   11                    | prototipo_funcion

   12 prototipo_funcion: especificador_tipo IDENTIFICADOR '(' lista_parametros_opt ')' ';'
   13                  | VOID IDENTIFICADOR '(' lista_parametros_opt ')' ';'

   14 lista_parametros_opt: /* vacío */
   15                     | VOID
   16                     | lista_parametros

   17 expresion: expresion_asignacion

   18 expresion_asignacion: expresion_logica_or
   19                     | IDENTIFICADOR ASSIGN expresion_asignacion
   20                     | IDENTIFICADOR ADD_ASSIGN expresion_asignacion
   21                     | IDENTIFICADOR SUB_ASSIGN expresion_asignacion
   22                     | IDENTIFICADOR MUL_ASSIGN expresion_asignacion
   23                     | IDENTIFICADOR DIV_ASSIGN expresion_asignacion

   24 expresion_logica_or: expresion_logica_and
   25                    | expresion_logica_or OR expresion_logica_and

   26 expresion_logica_and: expresion_igualdad
   27                     | expresion_logica_and AND expresion_igualdad

   28 expresion_igualdad: expresion_relacional
   29                   | expresion_igualdad EQ expresion_relacional
   30                   | expresion_igualdad NE expresion_relacional

   31 expresion_relacional: expresion_aditiva
   32                     | expresion_relacional LT expresion_aditiva
   33                     | expresion_relacional GT expresion_aditiva
   34                     | expresion_relacional LE expresion_aditiva
   35                     | expresion_relacional GE expresion_aditiva

   36 expresion_aditiva: expresion_multiplicativa
   37                  | expresion_aditiva PLUS expresion_multiplicativa
   38                  | expresion_aditiva MINUS expresion_multiplicativa

   39 expresion_multiplicativa: expresion_unaria
   40                         | expresion_multiplicativa STAR expresion_unaria
   41                         | expresion_multiplicativa SLASH expresion_unaria

   42 expresion_unaria: expresion_postfija
   43                 | PLUSPLUS IDENTIFICADOR
   44                 | MINUSMINUS IDENTIFICADOR
   45                 | MINUS expresion_unaria

   46 expresion_postfija: expresion_primaria
   47                   | IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   48                   | IDENTIFICADOR PLUSPLUS
   49                   | IDENTIFICADOR MINUSMINUS

   50 expresion_primaria: IDENTIFICADOR
   51                   | CONSTANTE
   52                   | CONSTANTE_REAL
   53                   | STRING_LITERAL
   54                   | '(' expresion ')'

   55 lista_argumentos_invocacion: /* vacío */
   56                            | lista_expresiones

   57 lista_expresiones: expresion
   58                  | lista_expresiones ',' expresion

   59 sentencia: sentencia_etiquetada
   60          | sentencia_expresion
   61          | sentencia_compuesta
   62          | sentencia_seleccion
   63          | sentencia_iteracion
   64          | sentencia_salto

   65 sentencia_etiquetada: CASE expresion ':' sentencia
   66                     | DEFAULT ':' sentencia
   67                     | CASE expresion ':'
   68                     | DEFAULT ':'

   69 sentencia_expresion: ';'
   70                    | expresion ';'

   71 sentencia_compuesta: '{' '}'
   72                    | '{' lista_elementos_bloque '}'
   73                    | '{' lista_elementos_bloque error '}'
   74                    | '{' error '}'

   75 lista_elementos_bloque: elemento_bloque
   76                       | lista_elementos_bloque elemento_bloque
   77                       | lista_elementos_bloque error
   78                       | error

   79 elemento_bloque: declaracion
   80                | sentencia

   81 sentencia_seleccion: IF '(' expresion ')' sentencia
   82                    | IF '(' expresion ')' sentencia ELSE sentencia
   83                    | SWITCH '(' expresion ')' sentencia

   84 sentencia_iteracion: WHILE '(' expresion ')' sentencia
   85                    | DO sentencia WHILE '(' expresion ')' ';'
   86                    | FOR '(' expresion_opt ';' expresion_opt ';' expresion_opt ')' sentencia
   87                    | FOR '(' declaracion expresion_opt ';' expresion_opt ')' sentencia

   88 expresion_opt: /* vacío */
   89              | expresion

   90 sentencia_salto: CONTINUE ';'
   91                | BREAK ';'
   92                | RETURN ';'
   93                | RETURN expresion ';'

   94 declaracion: especificadores_declaracion ';'
   95            | especificadores_declaracion lista_declaradores ';'

   96 especificadores_declaracion: especificador_tipo
   97                            | especificador_tipo especificador_tipo

   98 especificador_tipo: ESPECIFICADOR_TIPO
   99                   | VOID

  100 lista_declaradores: declarador
  101                   | lista_declaradores ',' declarador

  102 declarador: IDENTIFICADOR
  103           | IDENTIFICADOR ASSIGN expresion
  104           | IDENTIFICADOR ASSIGN CONSTANTE
  105           | IDENTIFICADOR ASSIGN CONSTANTE_REAL

  106 definicion_funcion: especificador_tipo IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta
  107                   | VOID IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta

  108 lista_parametros: parametro
  109                 | lista_parametros ',' parametro

  110 parametro: especificador_tipo IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 12 13 47 54 81 82 83 84 85 86 87 106 107
')' (41) 12 13 47 54 81 82 83 84 85 86 87 106 107
',' (44) 58 101 109
':' (58) 65 66 67 68
';' (59) 6 8 9 12 13 69 70 85 86 87 90 91 92 93 94 95
'{' (123) 71 72 73 74
'}' (125) 7 71 72 73 74
error (256) 6 7 73 74 77 78
DIV_ASSIGN (258) 23
MUL_ASSIGN (259) 22
SUB_ASSIGN (260) 21
ADD_ASSIGN (261) 20
ASSIGN (262) 8 19 103 104 105
OR (263) 25
AND (264) 27
NE (265) 30
EQ (266) 29
GE (267) 35
LE (268) 34
GT (269) 33
LT (270) 32
MINUS (271) 38 45
PLUS (272) 37
SLASH (273) 41
STAR (274) 40
UNARY_MINUS (275)
MINUSMINUS (276) 44 49
PLUSPLUS (277) 43 48
ESPECIFICADOR_TIPO (278) 98
IF (279) 81 82
ELSE (280) 82
DEFAULT (281) 66 68
CASE (282) 65 67
STRING_LITERAL (283) 53
SWITCH (284) 83
BREAK (285) 91
FOR (286) 86 87
DO (287) 85
WHILE (288) 84 85
CONTINUE (289) 90
RETURN (290) 92 93
VOID (291) 13 15 99 107
IDENTIFICADOR (292) 8 12 13 19 20 21 22 23 43 44 47 48 49 50 102 103
    104 105 106 107 110
CONSTANTE (293) 51 104
CONSTANTE_REAL (294) 52 105


No terminales con las reglas donde aparecen

$accept (47)
    en la izquierda: 0
programa (48)
    en la izquierda: 1 2, en la derecha: 0 2
elemento_programa (49)
    en la izquierda: 3 4 5 6 7, en la derecha: 2
sentencia_expresion_global (50)
    en la izquierda: 8 9, en la derecha: 5
declaracion_externa (51)
    en la izquierda: 10 11, en la derecha: 4
prototipo_funcion (52)
    en la izquierda: 12 13, en la derecha: 11
lista_parametros_opt (53)
    en la izquierda: 14 15 16, en la derecha: 12 13 106 107
expresion (54)
    en la izquierda: 17, en la derecha: 9 54 57 58 65 67 70 81 82 83
    84 85 89 93 103
expresion_asignacion (55)
    en la izquierda: 18 19 20 21 22 23, en la derecha: 17 19 20 21
    22 23
expresion_logica_or (56)
    en la izquierda: 24 25, en la derecha: 18 25
expresion_logica_and (57)
    en la izquierda: 26 27, en la derecha: 24 25 27
expresion_igualdad (58)
    en la izquierda: 28 29 30, en la derecha: 26 27 29 30
expresion_relacional (59)
    en la izquierda: 31 32 33 34 35, en la derecha: 28 29 30 32 33
    34 35
expresion_aditiva (60)
    en la izquierda: 36 37 38, en la derecha: 31 32 33 34 35 37 38
expresion_multiplicativa (61)
    en la izquierda: 39 40 41, en la derecha: 36 37 38 40 41
expresion_unaria (62)
    en la izquierda: 42 43 44 45, en la derecha: 39 40 41 45
expresion_postfija (63)
    en la izquierda: 46 47 48 49, en la derecha: 42
expresion_primaria (64)
    en la izquierda: 50 51 52 53 54, en la derecha: 46
lista_argumentos_invocacion (65)
    en la izquierda: 55 56, en la derecha: 47
lista_expresiones (66)
    en la izquierda: 57 58, en la derecha: 56 58
sentencia (67)
    en la izquierda: 59 60 61 62 63 64, en la derecha: 65 66 80 81
    82 83 84 85 86 87
sentencia_etiquetada (68)
    en la izquierda: 65 66 67 68, en la derecha: 59
sentencia_expresion (69)
    en la izquierda: 69 70, en la derecha: 60
sentencia_compuesta (70)
    en la izquierda: 71 72 73 74, en la derecha: 61 106 107
lista_elementos_bloque (71)
    en la izquierda: 75 76 77 78, en la derecha: 72 73 76 77
elemento_bloque (72)
    en la izquierda: 79 80, en la derecha: 75 76
sentencia_seleccion (73)
    en la izquierda: 81 82 83, en la derecha: 62
sentencia_iteracion (74)
    en la izquierda: 84 85 86 87, en la derecha: 63
expresion_opt (75)
    en la izquierda: 88 89, en la derecha: 86 87
sentencia_salto (76)
    en la izquierda: 90 91 92 93, en la derecha: 64
declaracion (77)
    en la izquierda: 94 95, en la derecha: 10 79 87
especificadores_declaracion (78)
    en la izquierda: 96 97, en la derecha: 94 95
especificador_tipo (79)
    en la izquierda: 98 99, en la derecha: 12 96 97 106 110
lista_declaradores (80)
    en la izquierda: 100 101, en la derecha: 95 101
declarador (81)
    en la izquierda: 102 103 104 105, en la derecha: 100 101
definicion_funcion (82)
    en la izquierda: 106 107, en la derecha: 3
lista_parametros (83)
    en la izquierda: 108 109, en la derecha: 16 109
parametro (84)
    en la izquierda: 110, en la derecha: 108 109


estado 0

    0 $accept: . programa $end
    1 programa: .
    2         | . programa elemento_programa

    $default  reduce usando la regla 1 (programa)

    programa  ir al estado 1


estado 1

    0 $accept: programa . $end
    2 programa: programa . elemento_programa
    3 elemento_programa: . definicion_funcion
    4                  | . declaracion_externa
    5                  | . sentencia_expresion_global
    6                  | . error ';'
    7                  | . error '}'
    8 sentencia_expresion_global: . IDENTIFICADOR ASSIGN IDENTIFICADOR ';'
    9                           | . expresion ';'
   10 declaracion_externa: . declaracion
   11                    | . prototipo_funcion
   12 prototipo_funcion: . especificador_tipo IDENTIFICADOR '(' lista_parametros_opt ')' ';'
   13                  | . VOID IDENTIFICADOR '(' lista_parametros_opt ')' ';'
   17 expresion: . expresion_asignacion
   18 expresion_asignacion: . expresion_logica_or
   19                     | . IDENTIFICADOR ASSIGN expresion_asignacion
   20                     | . IDENTIFICADOR ADD_ASSIGN expresion_asignacion
   21                     | . IDENTIFICADOR SUB_ASSIGN expresion_asignacion
   22                     | . IDENTIFICADOR MUL_ASSIGN expresion_asignacion
   23                     | . IDENTIFICADOR DIV_ASSIGN expresion_asignacion
   24 expresion_logica_or: . expresion_logica_and
   25                    | . expresion_logica_or OR expresion_logica_and
   26 expresion_logica_and: . expresion_igualdad
   27                     | . expresion_logica_and AND expresion_igualdad
   28 expresion_igualdad: . expresion_relacional
   29                   | . expresion_igualdad EQ expresion_relacional
   30                   | . expresion_igualdad NE expresion_relacional
   31 expresion_relacional: . expresion_aditiva
   32                     | . expresion_relacional LT expresion_aditiva
   33                     | . expresion_relacional GT expresion_aditiva
   34                     | . expresion_relacional LE expresion_aditiva
   35                     | . expresion_relacional GE expresion_aditiva
   36 expresion_aditiva: . expresion_multiplicativa
   37                  | . expresion_aditiva PLUS expresion_multiplicativa
   38                  | . expresion_aditiva MINUS expresion_multiplicativa
   39 expresion_multiplicativa: . expresion_unaria
   40                         | . expresion_multiplicativa STAR expresion_unaria
   41                         | . expresion_multiplicativa SLASH expresion_unaria
   42 expresion_unaria: . expresion_postfija
   43                 | . PLUSPLUS IDENTIFICADOR
   44                 | . MINUSMINUS IDENTIFICADOR
   45                 | . MINUS expresion_unaria
   46 expresion_postfija: . expresion_primaria
   47                   | . IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   48                   | . IDENTIFICADOR PLUSPLUS
   49                   | . IDENTIFICADOR MINUSMINUS
   50 expresion_primaria: . IDENTIFICADOR
   51                   | . CONSTANTE
   52                   | . CONSTANTE_REAL
   53                   | . STRING_LITERAL
   54                   | . '(' expresion ')'
   94 declaracion: . especificadores_declaracion ';'
   95            | . especificadores_declaracion lista_declaradores ';'
   96 especificadores_declaracion: . especificador_tipo
   97                            | . especificador_tipo especificador_tipo
   98 especificador_tipo: . ESPECIFICADOR_TIPO
   99                   | . VOID
  106 definicion_funcion: . especificador_tipo IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta
  107                   | . VOID IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta

    $end                desplazar e ir al estado 2
    error               desplazar e ir al estado 3
    MINUS               desplazar e ir al estado 4
    MINUSMINUS          desplazar e ir al estado 5
    PLUSPLUS            desplazar e ir al estado 6
    '('                 desplazar e ir al estado 7
    ESPECIFICADOR_TIPO  desplazar e ir al estado 8
    STRING_LITERAL      desplazar e ir al estado 9
    VOID                desplazar e ir al estado 10
    IDENTIFICADOR       desplazar e ir al estado 11
    CONSTANTE           desplazar e ir al estado 12
    CONSTANTE_REAL      desplazar e ir al estado 13

    elemento_programa            ir al estado 14
    sentencia_expresion_global   ir al estado 15
    declaracion_externa          ir al estado 16
    prototipo_funcion            ir al estado 17
    expresion                    ir al estado 18
    expresion_asignacion         ir al estado 19
    expresion_logica_or          ir al estado 20
    expresion_logica_and         ir al estado 21
    expresion_igualdad           ir al estado 22
    expresion_relacional         ir al estado 23
    expresion_aditiva            ir al estado 24
    expresion_multiplicativa     ir al estado 25
    expresion_unaria             ir al estado 26
    expresion_postfija           ir al estado 27
    expresion_primaria           ir al estado 28
    declaracion                  ir al estado 29
    especificadores_declaracion  ir al estado 30
    especificador_tipo           ir al estado 31
    definicion_funcion           ir al estado 32


estado 2

    0 $accept: programa $end .

    $default  aceptar


estado 3

    6 elemento_programa: error . ';'
    7                  | error . '}'

    ';'  desplazar e ir al estado 33
    '}'  desplazar e ir al estado 34


estado 4

   42 expresion_unaria: . expresion_postfija
   43                 | . PLUSPLUS IDENTIFICADOR
   44                 | . MINUSMINUS IDENTIFICADOR
   45                 | . MINUS expresion_unaria
   45                 | MINUS . expresion_unaria
   46 expresion_postfija: . expresion_primaria
   47                   | . IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   48                   | . IDENTIFICADOR PLUSPLUS
   49                   | . IDENTIFICADOR MINUSMINUS
   50 expresion_primaria: . IDENTIFICADOR
   51                   | . CONSTANTE
   52                   | . CONSTANTE_REAL
   53                   | . STRING_LITERAL
   54                   | . '(' expresion ')'

    MINUS           desplazar e ir al estado 4
    MINUSMINUS      desplazar e ir al estado 5
    PLUSPLUS        desplazar e ir al estado 6
    '('             desplazar e ir al estado 7
    STRING_LITERAL  desplazar e ir al estado 9
    IDENTIFICADOR   desplazar e ir al estado 35
    CONSTANTE       desplazar e ir al estado 12
    CONSTANTE_REAL  desplazar e ir al estado 13

    expresion_unaria    ir al estado 36
    expresion_postfija  ir al estado 27
    expresion_primaria  ir al estado 28


estado 5

   44 expresion_unaria: MINUSMINUS . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 37


estado 6

   43 expresion_unaria: PLUSPLUS . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 38


estado 7

   17 expresion: . expresion_asignacion
   18 expresion_asignacion: . expresion_logica_or
   19                     | . IDENTIFICADOR ASSIGN expresion_asignacion
   20                     | . IDENTIFICADOR ADD_ASSIGN expresion_asignacion
   21                     | . IDENTIFICADOR SUB_ASSIGN expresion_asignacion
   22                     | . IDENTIFICADOR MUL_ASSIGN expresion_asignacion
   23                     | . IDENTIFICADOR DIV_ASSIGN expresion_asignacion
   24 expresion_logica_or: . expresion_logica_and
   25                    | . expresion_logica_or OR expresion_logica_and
   26 expresion_logica_and: . expresion_igualdad
   27                     | . expresion_logica_and AND expresion_igualdad
   28 expresion_igualdad: . expresion_relacional
   29                   | . expresion_igualdad EQ expresion_relacional
   30                   | . expresion_igualdad NE expresion_relacional
   31 expresion_relacional: . expresion_aditiva
   32                     | . expresion_relacional LT expresion_aditiva
   33                     | . expresion_relacional GT expresion_aditiva
   34                     | . expresion_relacional LE expresion_aditiva
   35                     | . expresion_relacional GE expresion_aditiva
   36 expresion_aditiva: . expresion_multiplicativa
   37                  | . expresion_aditiva PLUS expresion_multiplicativa
   38                  | . expresion_aditiva MINUS expresion_multiplicativa
   39 expresion_multiplicativa: . expresion_unaria
   40                         | . expresion_multiplicativa STAR expresion_unaria
   41                         | . expresion_multiplicativa SLASH expresion_unaria
   42 expresion_unaria: . expresion_postfija
   43                 | . PLUSPLUS IDENTIFICADOR
   44                 | . MINUSMINUS IDENTIFICADOR
   45                 | . MINUS expresion_unaria
   46 expresion_postfija: . expresion_primaria
   47                   | . IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   48                   | . IDENTIFICADOR PLUSPLUS
   49                   | . IDENTIFICADOR MINUSMINUS
   50 expresion_primaria: . IDENTIFICADOR
   51                   | . CONSTANTE
   52                   | . CONSTANTE_REAL
   53                   | . STRING_LITERAL
   54                   | . '(' expresion ')'
   54                   | '(' . expresion ')'

    MINUS           desplazar e ir al estado 4
    MINUSMINUS      desplazar e ir al estado 5
    PLUSPLUS        desplazar e ir al estado 6
    '('             desplazar e ir al estado 7
    STRING_LITERAL  desplazar e ir al estado 9
    IDENTIFICADOR   desplazar e ir al estado 39
    CONSTANTE       desplazar e ir al estado 12
    CONSTANTE_REAL  desplazar e ir al estado 13

    expresion                 ir al estado 40
    expresion_asignacion      ir al estado 19
    expresion_logica_or       ir al estado 20
    expresion_logica_and      ir al estado 21
    expresion_igualdad        ir al estado 22
    expresion_relacional      ir al estado 23
    expresion_aditiva         ir al estado 24
    expresion_multiplicativa  ir al estado 25
    expresion_unaria          ir al estado 26
    expresion_postfija        ir al estado 27
    expresion_primaria        ir al estado 28


estado 8

   98 especificador_tipo: ESPECIFICADOR_TIPO .

    $default  reduce usando la regla 98 (especificador_tipo)


estado 9

   53 expresion_primaria: STRING_LITERAL .

    $default  reduce usando la regla 53 (expresion_primaria)


estado 10

   13 prototipo_funcion: VOID . IDENTIFICADOR '(' lista_parametros_opt ')' ';'
   99 especificador_tipo: VOID .  [ESPECIFICADOR_TIPO, VOID, IDENTIFICADOR, ';']
  107 definicion_funcion: VOID . IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta

    IDENTIFICADOR  desplazar e ir al estado 41

    IDENTIFICADOR  [reduce usando la regla 99 (especificador_tipo)]
    $default       reduce usando la regla 99 (especificador_tipo)


estado 11

    8 sentencia_expresion_global: IDENTIFICADOR . ASSIGN IDENTIFICADOR ';'
   19 expresion_asignacion: IDENTIFICADOR . ASSIGN expresion_asignacion
   20                     | IDENTIFICADOR . ADD_ASSIGN expresion_asignacion
   21                     | IDENTIFICADOR . SUB_ASSIGN expresion_asignacion
   22                     | IDENTIFICADOR . MUL_ASSIGN expresion_asignacion
   23                     | IDENTIFICADOR . DIV_ASSIGN expresion_asignacion
   47 expresion_postfija: IDENTIFICADOR . '(' lista_argumentos_invocacion ')'
   48                   | IDENTIFICADOR . PLUSPLUS
   49                   | IDENTIFICADOR . MINUSMINUS
   50 expresion_primaria: IDENTIFICADOR .  [OR, AND, NE, EQ, GE, LE, GT, LT, MINUS, PLUS, SLASH, STAR, ';']

    DIV_ASSIGN  desplazar e ir al estado 42
    MUL_ASSIGN  desplazar e ir al estado 43
